[package]
name = "rocket-fs"
version = "0.1.0"
authors = ["Igor <klim.iv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = "0.4.7"

handlebars = "3.5.4"
serde = "1.0"
serde_json = "1.0"
