[package]
name = "rocket-fs"
version = "0.1.0"
authors = ["Igor <klim.iv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
download-lp = "*"

[dependencies]
rocket = "0.4.7"
rocket_contrib = "0.4.7"

handlebars = "4.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

urlencoding = "2.1.0"
chrono = "*"
